--- a/result-demo-pod.yaml
+++ b/result-demo-pod.yaml
@@ -1,1 +1,13 @@
-
+apiVersion: v1
+kind: pod
+metadate:
+  name: result-app-demo
+  labels:
+    name: result-app-demo
+    app: demo-app
+spec:
+  containers:
+    - name: result-app
+      image: kodekloud/examplevotingapp_result:v1
+      ports:
+        - containerPort: 80
