--- a/db-demo-pod.yaml
+++ b/db-demo-pod.yaml
@@ -1,1 +1,13 @@
-
+apiVersion: v1
+kind: pod
+metadate:
+  name: db-app-demo
+  labels:
+    name: db-app-demo
+    app: demo-app
+spec:
+  containers:
+    - name: db-app
+      image: redis
+      ports:
+        - containerPort: 6379
