--- a/postgress-demo-pod.yaml
+++ b/postgress-demo-pod.yaml
@@ -1,1 +1,18 @@
-
+apiVersion: v1
+kind: pod
+metadate:
+  name: postgress-app-demo
+  labels:
+    name: postgress-app-demo
+    app: demo-app
+spec:
+  containers:
+    - name: postgress-app
+      image: postgres
+      ports:
+        - containerPort: 5432
+      env:
+        - name: POSTGRES_USER
+          value: 'postgres'
+        - name: POSTGRES_PASSWORD
+          value: 'postgres'
