--- a/worker-demo-pod.yaml
+++ b/worker-demo-pod.yaml
@@ -1,1 +1,11 @@
-
+apiVersion: v1
+kind: pod
+metadate:
+  name: worker-app-demo
+  labels:
+    name: worker-app-demo
+    app: demo-app
+spec:
+  containers:
+    - name: worker-app
+      image: kodekloud/examplevotingapp_worker:v1
