--- a/voting-deploy.yaml
+++ b/voting-deploy.yaml
@@ -8,7 +8,7 @@ metadata:
 specs:
   replicas: 1
   template:
-    metadate:
+    metadata:
       name: voting-app-demo
       labels:
         name: voting-app-demo
