--- a/result-deploy.yaml
+++ b/result-deploy.yaml
@@ -8,7 +8,7 @@ metadata:
 specs:
   replicas: 1
   template:
-    metadate:
+    metadata:
       name: result-app-demo
       labels:
         name: result-app-demo
