--- a/result-deploy.yaml
+++ b/result-deploy.yaml
@@ -16,7 +16,7 @@ specs:
     spec:
       containers:
         - name: result-app
-          image: kodekloud/examplevotingapp_result:v1
+          image: dockersamples/examplevotingapp_result
           ports:
             - containerPort: 80
   selector:
