--- a/voting-deploy.yaml
+++ b/voting-deploy.yaml
@@ -19,7 +19,7 @@ specs:
           image: dockersamples/examplevotingapp_vote
           ports:
             - containerPort: 80
-  selectors:
+  selector:
     matchLabels:
       name: voting-app-demo
       app: demo-app
